# Farlands

./: CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: cmake.yml
app/: CMakeLists.txt  main.cpp
cmake/: CMakeValidation.cmake  Documentation.cmake  Graphics.cmake  Logging.cmake  Testing.cmake  Warnings.cmake
include/farlands/: prelude.hpp
include/farlands/control/: action.hpp
include/farlands/graphics/: gl_ctx.hpp  shader.hpp  shader_loader.hpp  window.hpp
include/farlands/meshs/: quad_mesh.hpp  triangle_mesh.hpp  vertex.hpp
include/farlands/settings/: bindings.hpp
include/project/: prelude.hpp
src/: CMakeLists.txt  prelude.cpp
src/graphics/: gl_ctx.cpp  shader.cpp  shader_loader.cpp  window.cpp
src/meshs/: quad_mesh.cpp  triangle_mesh.cpp
src/settings/: bindings.cpp
template/: header.hpp  source.cpp  source.test.cpp
test/: CMakeLists.txt  prelude.test.cpp
